Modificata gestione funzioni logaritmiche e trigonometriche

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -417,3 +417,14 @@
     }
   }
 }
+
+/* Lab51 style for custom functions */
+.mq-func {
+  padding: 0 .1em;
+}
+.mq-inner-func {
+  padding: 0 .1em;
+}
+.mq-log-base {
+  font-size: 70%;
+}
